fix(tooltip): fix alignment of tooltip for adding codebases
Align the tooltip to the left, in order to prevent rendering off screen.

fixes https://github.com/openshiftio/openshift.io/issues/1305

--- a/src/app/space/create/codebases/codebases-toolbar/codebases-toolbar.component.less
+++ b/src/app/space/create/codebases/codebases-toolbar/codebases-toolbar.component.less
@@ -3,11 +3,12 @@
   padding: 36px 20px;
 }
 .toolbar-pf-action-right {
+  .tooltip-left {
+    /* stylelint-disable */
+    left: 2050px !important;
+    /* stylelint-enable */
+  }
   .pficon-add-circle-o {
     color: @color-pf-blue-400;
-    @media (max-width: 992px) {
-      position: absolute;
-      right: 20px;
-    }
   }
 }
